--- a/src/components/review.astro
+++ b/src/components/review.astro
@@ -1,48 +1,60 @@
 ---
-import Star from "/star.svg";
+import { Image } from "astro:assets";
+import Star from "./star.svg";
 const {
-    stars = "",
-    date = "",
-    name = "",
-    location = "",
-    title = "",
-    description = "",
-    bgColor = "",
-    ...rest
+  stars = "",
+  date = "",
+  name = "",
+  location = "",
+  title = "",
+  description = "",
+  bgColor = "",
+  ...rest
 } = Astro.props;
 
-const nameIcon = name.split(" ").map((item: string) => item[0].toUpperCase()).join("").slice(0, 2);
+const nameIcon = name
+  .split(" ")
+  .map((item: string) => item[0].toUpperCase())
+  .join("")
+  .slice(0, 2);
 
-const colorArray = ["#DBD7D2",
-                    "#C0C0C0", 
-                    "#BEBFC5", 
-                    "#B2BEB5", 
-                    "#E5E4E2"];
-
+const colorArray = ["#DBD7D2", "#C0C0C0", "#BEBFC5", "#B2BEB5", "#E5E4E2"];
 ---
 
 <hr />
 <div {...rest} class="flex flex-col gap-1 p-4 rounded shadow-sm">
-    <div>
-        <div class="flex gap-4 text-xs md:text-base items-center">
-            <div class="w-8 h-8 text-black text-sm rounded-full flex items-center justify-center" style={`background-color: ${bgColor}`}>
-            {nameIcon}
-            </div>
-            
-            <span class="font-bold">
-                {name}
-            </span>
-            <div class="flex gap-1 items-center text-center pr-1">
-                <img src={Star} />
-                {stars}
-            </div>
-            <span class="text-slate-500">
-                {location}
-            </span>
-        </div>
-        <!-- <span class="text-slate-700 my-4">{date}</span> -->
+  <div>
+    <div class="flex gap-4 text-xs md:text-base items-center">
+      <div
+        class="w-8 h-8 text-black text-sm rounded-full flex items-center justify-center"
+        style={`background-color: ${bgColor}`}>
+        {nameIcon}
+      </div>
+
+      <span class="font-bold">
+        {name}
+      </span>
+      <div class="flex gap-1 items-center text-center pr-1">
+        <svg
+          aria-hidden="true"
+          class="w-5 h-5 text-yellow-400"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg">
+          <title>First star</title>
+          <path
+            d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"
+          ></path>
+        </svg>
+        {stars}
+      </div>
+      <span class="text-slate-500">
+        {location}
+      </span>
     </div>
-    <div class="text-cyan-500">{title}</div>
-    <div class="text-slate-500">{description}</div>
+    <!-- <span class="text-slate-700 my-4">{date}</span> -->
+  </div>
+  <div class="text-cyan-500">{title}</div>
+  <div class="text-slate-500">{description}</div>
 </div>
 <hr />
