--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -3,7 +3,7 @@ interface Props {
   href: string;
   size?: "md" | "lg";
   block?: boolean;
-  style?: "transparent" | "outline" | "primary" | "inverted" | "muted";
+  style?: "outline" | "primary" | "inverted" | "muted";
   class?: string;
   [x: string]: any;
 }
@@ -23,12 +23,9 @@ const sizes = {
 };
 
 const styles = {
-  transparent:
-    "bg-transparent border-2 border-white-800 text-white backdrop-blur hover:backdrop-sepia",
-  outline:
-    "bg-transparent border-2 border-gray-400 text-gray-400 hover:backdrop-sepia",
+  outline: "bg-transparent border-2 border-gray-300 text-gray-300",
   primary:
-    "bg-zinc-950 text-white hover:bg-gray-800 border-2 border-transparent",
+    "bg-zinc-900 text-white hover:bg-gray-800 border-2 border-transparent",
   inverted: "bg-white text-gray-800  border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
 };
