--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,19 +1,53 @@
 ---
-import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
-import Sectionhead from "@components/sectionhead.astro";
-import Button from "@components/ui/button.astro";
-import Contactform from "@components/contactform.astro";
+import BaseHead from "@layouts/BaseHead.astro";
+import Navbar from "@components/navbar/navbar.astro";
+import Footer from "@components/footer.astro";
 ---
 
-<Layout title="404 Not Found">
-  <Container>
-    <div
-      class="min-h-[calc(100vh-16rem)] flex items-center justify-center px-5">
-      <div class="mt-16 text-center">
-        <h1 class="text-4xl lg:text-5xl font-bold lg:tracking-tight">404</h1>
-        <p class="text-lg mt-4 text-slate-600">Page not found.</p>
+<html lang="en" class="antialiased break-words">
+  <head>
+    <BaseHead title="404 Not Found" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QZ7M5SN5FX"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-QZ7M5SN5FX");
+    </script>
+  </head>
+  <body>
+    <Navbar />
+    <Container>
+      <div
+        class="min-h-[calc(100vh-16rem)] flex items-center justify-center px-5">
+        <div class="mt-16 text-center">
+          <p class="text-lg mt-4 text-slate-600">Page not found.</p>
+          <a
+            href="/"
+            class="inline-block mt-8 px-6 py-3 text-slate-500 underline">
+            Go back home
+          </a>
+        </div>
       </div>
-    </div>
-  </Container>
-</Layout>
+    </Container>
+    <Footer />
+    <style is:global>
+      html {
+        scroll-behavior: smooth;
+      }
+      /* Improve Page speed */
+      /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
+      img {
+        content-visibility: auto;
+      }
+    </style>
+  </body>
+</html>
