--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,39 +1,71 @@
 ---
-import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Licenses from "@components/licenses.astro";
-import Check from "/check.svg";
 import Button from "@components/ui/button.astro";
+import BaseHead from "@layouts/BaseHead.astro";
+import Navbar from "@components/navbar/navbar.astro";
+import Footer from "@components/footer.astro";
 ---
 
-<Layout title="About">
-  <Container>
-    <Sectionhead>
-      <Fragment slot="title">About Us</Fragment>
-      <Fragment slot="desc"></Fragment>
-    </Sectionhead>
+<html lang="en" class="antialiased break-words">
+  <head>
+    <BaseHead title="About" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QZ7M5SN5FX"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    <div class="grid md:grid-cols-3 gap-8 mx-auto max-w-4xl mt-16 px-5">
-      <div class="col-span-2">
-        <p class="text-lg leading-relaxed text-slate-700">
-          Welcome to California Design Solutions - Your Trusted Home Improvement
-          Specialists. Since 2007, we have been locally owned and operated,
-          providing top-notch contracting services to our valued clients. <br
-          /><br />With over 16 years of industry experience, we have honed our
-          skills to deliver exceptional results in Additions, Kitchen Remodels,
-          and a wide range of Home Improvement projects. Our commitment to
-          quality workmanship, combined with our dedication to customer
-          satisfaction, sets us apart as the go-to choice for all your
-          renovation needs.
-        </p>
-        <br />
-        <a href="/contact"> <Button>Work with us</Button></a>
-        <!-- <img class="my-4 rounded" src="/unsplash/k.jpg" /> -->
-        <br />
+      gtag("config", "G-QZ7M5SN5FX");
+    </script>
+  </head>
+  <body>
+    <Navbar />
+    <Container>
+      <Sectionhead>
+        <Fragment slot="title">About Us</Fragment>
+        <Fragment slot="desc"></Fragment>
+      </Sectionhead>
+
+      <div class="grid md:grid-cols-3 gap-8 mx-auto max-w-4xl mt-16 px-5">
+        <div class="col-span-2">
+          <p class="text-lg leading-relaxed text-slate-700">
+            Welcome to California Design Solutions - Your Trusted Home
+            Improvement Specialists. Since 2007, we have been locally owned and
+            operated, providing top-notch contracting services to our valued
+            clients. <br /><br />With over 16 years of industry experience, we
+            have honed our skills to deliver exceptional results in Additions,
+            Kitchen Remodels, and a wide range of Home Improvement projects. Our
+            commitment to quality workmanship, combined with our dedication to
+            customer satisfaction, sets us apart as the go-to choice for all
+            your renovation needs.
+          </p>
+          <br />
+          <a href="/contact"> <Button>Work with us</Button></a>
+          <!-- <img class="my-4 rounded" src="/unsplash/k.jpg" /> -->
+          <br />
+        </div>
+        <Licenses />
+        <!-- <a href="/contact"> <Button>Work with us</Button></a> -->
       </div>
-      <Licenses />
-      <!-- <a href="/contact"> <Button>Work with us</Button></a> -->
-    </div>
-  </Container>
-</Layout>
+    </Container>
+    <Footer />
+    <style is:global>
+      html {
+        scroll-behavior: smooth;
+      }
+      /* Improve Page speed */
+      /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
+      img {
+        content-visibility: auto;
+      }
+    </style>
+  </body>
+</html>
