--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,10 +1,10 @@
 ---
 import { getCollection } from "astro:content";
-import { Image } from "astro:assets";
-import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-
+import BaseHead from "@layouts/BaseHead.astro";
+import Navbar from "@components/navbar/navbar.astro";
+import Footer from "@components/footer.astro";
 // Filter blog entries with 'draft: false' & date before current date
 const publishedBlogEntries = await getCollection("blog", ({ data }) => {
   return !data.draft && data.publishDate < new Date();
@@ -16,18 +16,37 @@ publishedBlogEntries.sort(function (a, b) {
 });
 ---
 
-<Layout title="Blog">
-  <Container>
-    <Sectionhead>
-      <Fragment slot="title">Our Blog</Fragment>
-      <Fragment slot="desc">
-        We write about building, design, and thoughts going on our mind.
-      </Fragment>
-    </Sectionhead>
-    <main class="mt-16 mx-4 md:mx-auto">
-      <ul class="grid gap-16 max-w-4xl mx-auto">
-        <h1 class="w-full text-center">Under Construction</h1>
-        <!-- {
+<html lang="en" class="antialiased break-words">
+  <head>
+    <BaseHead title="Blog" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QZ7M5SN5FX"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-QZ7M5SN5FX");
+    </script>
+  </head>
+  <body>
+    <Navbar />
+    <Container>
+      <Sectionhead>
+        <Fragment slot="title">Our Blog</Fragment>
+        <Fragment slot="desc">
+          We write about building, design, and thoughts going on our mind.
+        </Fragment>
+      </Sectionhead>
+      <main class="mt-16 mx-4 md:mx-auto">
+        <ul class="grid gap-16 max-w-4xl mx-auto">
+          <h1 class="w-full text-center">Under Construction</h1>
+          <!-- {
           publishedBlogEntries.map((blogPostEntry, index) => (
             <li>
               <a href={`/blog/${blogPostEntry.slug}`}>
@@ -71,7 +90,20 @@ publishedBlogEntries.sort(function (a, b) {
             </li>
           ))
         } -->
-      </ul>
-    </main>
-  </Container>
-</Layout>
+        </ul>
+      </main>
+    </Container>
+
+    <Footer />
+    <style is:global>
+      html {
+        scroll-behavior: smooth;
+      }
+      /* Improve Page speed */
+      /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
+      img {
+        content-visibility: auto;
+      }
+    </style>
+  </body>
+</html>
