--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,7 +1,9 @@
 ---
 import { getCollection } from "astro:content";
-import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
+import BaseHead from "@layouts/BaseHead.astro";
+import Navbar from "@components/navbar/navbar.astro";
+import Footer from "@components/footer.astro";
 
 // Generate a new path for every collection entry
 export async function getStaticPaths() {
@@ -17,49 +19,80 @@ const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
 
-<Layout title={entry.data.title}>
-  <Container>
-    <div class="mx-4 md:mx-auto">
-      <div class="mx-auto max-w-3xl mt-14">
-        <span
-          class="text-gray-600 uppercase tracking-wider text-sm font-medium">
-          {entry.data.category}
-        </span>
-        <h1
-          class="text-4xl lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight">
-          {entry.data.title}
-        </h1>
-        <div class="flex gap-2 mt-3 items-center flex-wrap md:flex-nowrap">
-          <span class="text-gray-400">
-            {entry.data.author}
+<html lang="en" class="antialiased break-words">
+  <head>
+    <BaseHead title={entry.data.title} />
+    <!-- Google tag (gtag.js) -->
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QZ7M5SN5FX"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-QZ7M5SN5FX");
+    </script>
+  </head>
+  <body>
+    <Navbar />
+    <Container>
+      <div class="mx-4 md:mx-auto">
+        <div class="mx-auto max-w-3xl mt-14">
+          <span
+            class="text-gray-600 uppercase tracking-wider text-sm font-medium">
+            {entry.data.category}
           </span>
-          <span class="text-gray-400">•</span>
-          <time
-            class="text-gray-400"
-            datetime={entry.data.publishDate.toISOString()}>
-            {entry.data.publishDate.toDateString()}
-          </time>
-          <span class="text-gray-400 hidden md:block">•</span>
-          <div class="w-full md:w-auto flex flex-wrap gap-3">
-            {
-              entry.data.tags.map((tag) => (
-                <span class="text-sm text-gray-500">#{tag}</span>
-              ))
-            }
+          <h1
+            class="text-4xl lg:text-5xl font-bold lg:tracking-tight mt-1 lg:leading-tight">
+            {entry.data.title}
+          </h1>
+          <div class="flex gap-2 mt-3 items-center flex-wrap md:flex-nowrap">
+            <span class="text-gray-400">
+              {entry.data.author}
+            </span>
+            <span class="text-gray-400">•</span>
+            <time
+              class="text-gray-400"
+              datetime={entry.data.publishDate.toISOString()}>
+              {entry.data.publishDate.toDateString()}
+            </time>
+            <span class="text-gray-400 hidden md:block">•</span>
+            <div class="w-full md:w-auto flex flex-wrap gap-3">
+              {
+                entry.data.tags.map((tag) => (
+                  <span class="text-sm text-gray-500">#{tag}</span>
+                ))
+              }
+            </div>
           </div>
         </div>
-      </div>
 
-      <div class="mx-auto prose prose-lg mt-6 max-w-3xl">
-        <Content />
+        <div class="mx-auto prose prose-lg mt-6 max-w-3xl">
+          <Content />
+        </div>
+        <div class="text-center mt-8">
+          <a
+            href="/blog"
+            class="bg-gray-100 px-5 py-3 rounded-md hover:bg-gray-200 transition"
+            >← Back to Blog</a
+          >
+        </div>
       </div>
-      <div class="text-center mt-8">
-        <a
-          href="/blog"
-          class="bg-gray-100 px-5 py-3 rounded-md hover:bg-gray-200 transition"
-          >← Back to Blog</a
-        >
-      </div>
-    </div>
-  </Container>
-</Layout>
+    </Container>
+    <Footer />
+    <style is:global>
+      html {
+        scroll-behavior: smooth;
+      }
+      /* Improve Page speed */
+      /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
+      img {
+        content-visibility: auto;
+      }
+    </style>
+  </body>
+</html>
