--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,43 +1,75 @@
 ---
-import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
-import Button from "@components/ui/button.astro";
 import Contactform from "@components/contactform.astro";
+import BaseHead from "@layouts/BaseHead.astro";
+import Navbar from "@components/navbar/navbar.astro";
+import Footer from "@components/footer.astro";
 ---
 
-<Layout title="Contact">
-  <Container>
-    <Sectionhead>
-      <Fragment slot="title">Schedule your Appointment</Fragment>
-      <Fragment slot="desc">We are here to help.</Fragment>
-    </Sectionhead>
+<html lang="en" class="antialiased break-words">
+  <head>
+    <BaseHead title="Contact" />
+    <!-- Google tag (gtag.js) -->
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-QZ7M5SN5FX"></script>
+    <script type="text/partytown">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-    <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16 px-5">
-      <div>
-        <h2 class="font-bold text-3xl text-gray-800">Contact Us</h2>
-        <p class="text-lg leading-relaxed text-slate-500 mt-3">
-          Want to work with us? We are here to help. Fill out the form, send us
-          an email, or call us.
-        </p>
-        <div class="mt-5">
-          <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
+      gtag("config", "G-QZ7M5SN5FX");
+    </script>
+  </head>
+  <body>
+    <Navbar />
+    <Container>
+      <Sectionhead>
+        <Fragment slot="title">Schedule your Appointment</Fragment>
+        <Fragment slot="desc">We are here to help.</Fragment>
+      </Sectionhead>
+
+      <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16 px-5">
+        <div>
+          <h2 class="font-bold text-3xl text-gray-800">Contact Us</h2>
+          <p class="text-lg leading-relaxed text-slate-500 mt-3">
+            Want to work with us? We are here to help. Fill out the form, send
+            us an email, or call us.
+          </p>
+          <div class="mt-5">
+            <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
             <span
               >Address: <br />3473 Durello Cir, Rancho Cordova, CA 95670</span
             >
           </div> -->
-          <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
+            <!-- <div class="flex items-center mt-2 space-x-2 text-gray-600">
         <a href="mailto:hello@astroshipstarter.com">Email</a>
       </div> -->
-          <div class="flex flex-col gap-4 mt-2 text-gray-600">
-            <a href="tel:+1 (916) 612 9218">Phone: +1 916-612-9218</a>
-            <p>Email: cdsremodeling@gmail.com</p>
+            <div class="flex flex-col gap-4 mt-2 text-gray-600">
+              <a href="tel:+1 (916) 612 9218">Phone: +1 916-612-9218</a>
+              <p>Email: cdsremodeling@gmail.com</p>
+            </div>
           </div>
         </div>
+        <div>
+          <Contactform />
+        </div>
       </div>
-      <div>
-        <Contactform />
-      </div>
-    </div>
-  </Container>
-</Layout>
+    </Container>
+    <Footer />
+    <style is:global>
+      html {
+        scroll-behavior: smooth;
+      }
+      /* Improve Page speed */
+      /* https://css-tricks.com/almanac/properties/c/content-visibility/ */
+      img {
+        content-visibility: auto;
+      }
+    </style>
+  </body>
+</html>
